--- a/roadmap/v0.10-agent-sdk/p2.2-llm-boundary-issue.md
+++ b/roadmap/v0.10-agent-sdk/p2.2-llm-boundary-issue.md
@@ -12,7 +12,7 @@ There was a boundary conflict in early P2.2 direction:
 - `sys/llm.generate@1` is a low-level built-in effect contract used by core runtime + host adapters.
 - `aos.agent/*` is an SDK layer that should build on top of core primitives.
 
-Early scaffold work blurred this boundary by defining `sys/Llm*` schemas inside `crates/aos-agent-sdk` AIR assets. That made SDK assets appear authoritative for core `sys/*` contracts.
+Early scaffold work blurred this boundary by defining `sys/Llm*` schemas inside `crates/aos-agent` AIR assets. That made SDK assets appear authoritative for core `sys/*` contracts.
 
 The rebaseline keeps `sys/llm.generate@1` agent-agnostic, and keeps SDK contracts focused on session/run semantics and deterministic mapping.
 
@@ -29,7 +29,7 @@ The rebaseline keeps `sys/llm.generate@1` agent-agnostic, and keeps SDK contract
 
 ### What happened in scaffolding
 
-In `crates/aos-agent-sdk/air/schemas.air.json`, temporary drafts introduced `sys/Llm*` schema definitions. That is now treated as invalid ownership and removed.
+In `crates/aos-agent/air/schemas.air.json`, temporary drafts introduced `sys/Llm*` schema definitions. That is now treated as invalid ownership and removed.
 
 ## Why this is a problem
 
@@ -105,4 +105,4 @@ not as profile-registry choreography and not as SDK-local ownership of core `sys
    - SDK deterministically maps run/step state into core params,
    - replay determinism is preserved.
 
-Status note (2026-02-14): consolidated integration assertions are in place across `aos-agent-sdk` mapper tests, `aos-host` adapter request-path integration tests, and `aos-smoke` deterministic replay coverage.
+Status note (2026-02-14): consolidated integration assertions are in place across `aos-agent` mapper tests, `aos-host` adapter request-path integration tests, and `aos-smoke` deterministic replay coverage.
