--- a/roadmap/v0.10-agent-sdk/p2.2-llm-contract-direct-provider-model.md
+++ b/roadmap/v0.10-agent-sdk/p2.2-llm-contract-direct-provider-model.md
@@ -8,7 +8,7 @@
 
 Completed:
 
-1. Removed provider-profile/profile-lookup scaffolding from `aos-agent-sdk` contracts, AIR assets, and reducer bins.
+1. Removed provider-profile/profile-lookup scaffolding from `aos-agent` contracts, AIR assets, and reducer bins.
 2. Rebased SDK contracts to direct provider/model run config:
    - `SessionConfig@1` and `RunConfig@1` now carry `provider` + `model`.
 3. Core `sys/Llm*` contract shapes are present in primary ownership locations:
@@ -16,7 +16,7 @@ Completed:
    - `crates/aos-effects/src/builtins/mod.rs`,
    - `crates/aos-host/src/adapters/llm.rs`.
 4. Build status:
-   - `cargo check -p aos-agent-sdk` passes.
+   - `cargo check -p aos-agent` passes.
 5. Implemented SDK deterministic mapper helpers:
    - `RunConfig + StepContext -> sys/LlmGenerateParams@1`
    - includes reasoning effort enum-to-text mapping and required-field validation.
@@ -33,7 +33,7 @@ Completed:
    - `apply_session_event_with_catalog` rejects unknown provider/model before partial activation,
    - unit assertions verify no state mutation on rejected run start.
 10. Closed remaining deterministic P2.2 assertion set by combining:
-    - mapper-materialization unit coverage (`aos-agent-sdk`),
+    - mapper-materialization unit coverage (`aos-agent`),
     - adapter request-path integration coverage (`aos-host`),
     - replay-stable SDK smoke coverage (`aos-smoke agent-session`).
 
