--- a/roadmap/v0.10-agent-sdk/p2.5-failure-retry-cancel.md
+++ b/roadmap/v0.10-agent-sdk/p2.5-failure-retry-cancel.md
@@ -94,7 +94,7 @@ Completed:
 
 1. Documented canonical failure code list and mapping guidance.
 2. Documented retry ownership matrix (adapter vs plan vs reducer).
-3. Small `aos-agent-sdk` helper functions for deterministic code mapping/construction.
+3. Small `aos-agent` helper functions for deterministic code mapping/construction.
 4. Integration tests covering:
    - policy/cap deny distinction,
    - adapter timeout/error distinction,
