--- a/roadmap/v0.10-agent-sdk/p2.6-sdk-conformance-live-smoke.md
+++ b/roadmap/v0.10-agent-sdk/p2.6-sdk-conformance-live-smoke.md
@@ -45,7 +45,7 @@ Completed:
    - `aos-smoke agent-live` (SDK session-event loop + iterative tool traversal),
    - `aos-smoke agent-live --provider anthropic`,
    - `chat-live` flow uses secret-injected API keys (`defsecret`-based),
-   - `agent-live` uses `aos.agent/*` schemas and `aos-agent-sdk` reducer/helpers with multi-step tool batches,
+   - `agent-live` uses `aos.agent/*` schemas and `aos-agent` reducer/helpers with multi-step tool batches,
    - both validate primary + follow-up turns and end with replay verification.
 8. Final P2 closure report was published:
    - see `roadmap/v0.10-agent-sdk/p2-closure-report.md`.
