--- a/roadmap/v0.10-agent-sdk/p3.1-defs-sync.md
+++ b/roadmap/v0.10-agent-sdk/p3.1-defs-sync.md
@@ -54,7 +54,7 @@ No AIR schema/kernel protocol changes were made.
     "imports": [
       {
         "cargo": {
-          "package": "aos-agent-sdk",
+          "package": "aos-agent",
           "air_dir": "air",
           "manifest_path": "../../Cargo.toml"
         }
@@ -124,7 +124,7 @@ Other existing invariants remain unchanged:
 
 SDK defs are imported directly from:
 
-1. `crates/aos-agent-sdk/air`
+1. `crates/aos-agent/air`
 
 No parallel `air/exports/*` mirror is required.
 
@@ -132,14 +132,14 @@ No parallel `air/exports/*` mirror is required.
 
 ### `crates/aos-smoke/fixtures/22-agent-live`
 
-1. Added `aos.sync.json` with cargo import of `aos-agent-sdk` AIR root.
+1. Added `aos.sync.json` with cargo import of `aos-agent` AIR root.
 2. Deleted local duplicate `air/schemas.air.json`.
 3. Updated smoke harness to pass import roots when loading fixture AIR.
 
 ### `apps/demiurge`
 
 1. Added `air.imports` cargo entry in `apps/demiurge/aos.sync.json`.
-2. Added `cargo.manifest_path` to point at workspace root (`../../Cargo.toml`) so package discovery includes `aos-agent-sdk`.
+2. Added `cargo.manifest_path` to point at workspace root (`../../Cargo.toml`) so package discovery includes `aos-agent`.
 3. Added imported schema ref (`aos.agent/SessionId@1`) in `apps/demiurge/air/manifest.air.json` to exercise import path.
 
 ## Validation Performed
