--- a/roadmap/v0.10-agent-sdk/p2.1-session-contracts.md
+++ b/roadmap/v0.10-agent-sdk/p2.1-session-contracts.md
@@ -9,22 +9,22 @@
 Completed:
 
 1. Added new SDK crate and workspace wiring:
-   - `crates/aos-agent-sdk`
+   - `crates/aos-agent`
    - root `Cargo.toml` member entry
 2. Added P2.1 contract schema assets:
-   - `crates/aos-agent-sdk/air/schemas.air.json`
+   - `crates/aos-agent/air/schemas.air.json`
    - includes all listed P2.1 `aos.agent/*` core schemas.
 3. Added SDK module and manifest assets:
-   - `crates/aos-agent-sdk/air/module.air.json`
-   - `crates/aos-agent-sdk/air/manifest.air.json`
+   - `crates/aos-agent/air/module.air.json`
+   - `crates/aos-agent/air/manifest.air.json`
 4. Added Rust contract types and helper scaffolding:
-   - `crates/aos-agent-sdk/src/contracts/*`
-   - `crates/aos-agent-sdk/src/helpers/*`
+   - `crates/aos-agent/src/contracts/*`
+   - `crates/aos-agent/src/helpers/*`
 5. Added isolated WASM module bins (pattern aligned to `crates/aos-sys`):
-   - `crates/aos-agent-sdk/src/bin/session_workflow.rs`
-   - `crates/aos-agent-sdk/src/bin/session_event_echo.rs`
+   - `crates/aos-agent/src/bin/session_workflow.rs`
+   - `crates/aos-agent/src/bin/session_event_echo.rs`
 6. Build status:
-   - `cargo check -p aos-agent-sdk` passes.
+   - `cargo check -p aos-agent` passes.
 7. Implemented first functional reducer slice:
    - shared deterministic event application helper (`apply_session_event`),
    - run-start config selection/snapshot and required field validation,
@@ -111,12 +111,12 @@ This allows deterministic incrementing in reducer state while limiting UUID gene
    - one active tool batch per tool round,
    - no next LLM step until batch settled.
 6. Add crate scaffolding:
-   - `crates/aos-agent-sdk` with shared types and reducer helper traits.
+   - `crates/aos-agent` with shared types and reducer helper traits.
    - keep SDK reducer/pure WASM modules in this crate (`src/bin/*`) for v0.10.
-   - keep reusable SDK AIR assets under `crates/aos-agent-sdk/air/`.
+   - keep reusable SDK AIR assets under `crates/aos-agent/air/`.
 7. Define the P2.1 execution harness boundary:
    - use `crates/aos-smoke` fixtures for end-to-end lifecycle/concurrency validation.
-   - do not create a separate e2e runner in `aos-agent-sdk`.
+   - do not create a separate e2e runner in `aos-agent`.
 
 ## Proposed Schema Shapes (AIR-style)
 
@@ -365,7 +365,7 @@ Rules:
 ## Deliverables
 
 1. New AIR schema files for session lifecycle/control contracts.
-2. `aos-agent-sdk` crate with core IDs and state/event types, lifecycle helpers, queue semantics, and settle helpers.
+2. `aos-agent` crate with core IDs and state/event types, lifecycle helpers, queue semantics, and settle helpers.
 3. Template keyed reducer and routing conventions:
    - key by `session_id`,
    - route `SessionEvent` to `SessionReducer`.
