--- a/roadmap/v0.10-agent-sdk/p3.1-defs-sync.md
+++ b/roadmap/v0.10-agent-sdk/p3.1-defs-sync.md
@@ -136,11 +136,11 @@ No parallel `air/exports/*` mirror is required.
 2. Deleted local duplicate `air/schemas.air.json`.
 3. Updated smoke harness to pass import roots when loading fixture AIR.
 
-### `apps/demiurge`
+### `worlds/demiurge`
 
-1. Added `air.imports` cargo entry in `apps/demiurge/aos.sync.json`.
+1. Added `air.imports` cargo entry in `worlds/demiurge/aos.sync.json`.
 2. Added `cargo.manifest_path` to point at workspace root (`../../Cargo.toml`) so package discovery includes `aos-agent`.
-3. Added imported schema ref (`aos.agent/SessionId@1`) in `apps/demiurge/air/manifest.air.json` to exercise import path.
+3. Added imported schema ref (`aos.agent/SessionId@1`) in `worlds/demiurge/air/manifest.air.json` to exercise import path.
 
 ## Validation Performed
 
@@ -148,9 +148,9 @@ No parallel `air/exports/*` mirror is required.
 2. `cargo test -p aos-host manifest_loader::tests -- --nocapture`
 3. `cargo test -p aos-cli -- --nocapture`
 4. `cargo check -p aos-smoke`
-5. `cargo run -p aos-cli -- --quiet -w apps/demiurge push --dry-run`
+5. `cargo run -p aos-cli -- --quiet -w worlds/demiurge push --dry-run`
 6. `cargo run -p aos-cli -- --quiet -w crates/aos-smoke/fixtures/22-agent-live push --dry-run`
-7. `cargo run -p aos-cli -- --quiet -w apps/demiurge status`
+7. `cargo run -p aos-cli -- --quiet -w worlds/demiurge status`
 8. `cargo run -p aos-cli -- --quiet -w crates/aos-smoke/fixtures/22-agent-live status`
 9. `cargo run -p aos-smoke -- agent-live` (live run succeeded)
 
